--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.3.5",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
@@ -27,10 +29,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
